syntax = "proto3";

package knowledge;

import "grc20.proto";

/**
 * November 13, 2025
 * A HermesEdit represents a GRC-20 Edit that has been enriched by the
 * Hermes event stream service. Hermes currently does a few things:
 *
 * 1. Resolves the IPFS CID into the serialized edit representation
 * 2. Appends any blockchain metadata useful for downstream consumers
 * 3. Appends any community or space topology metadata useful for
 *    downstream consumers
 */
message HermesEdit {
  bytes id = 1;
  string name = 2;
  repeated grc20.Op ops = 3;
  repeated bytes authors = 4;
  optional bytes language = 5;
  // Space Topology metadata
  string space_id = 6;
  bool is_canonical = 7;
  // Blockchain Metadata
  uint64 created_at = 8;  // Unix timestamp in seconds
  bytes created_by = 9;   // address
  uint64 block_number = 10;
  string cursor = 11;
}
